plugins {
    id 'java-library'
    id 'maven-publish'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {

    implementation platform(project(':platform'))

    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
    testCompileOnly "org.projectlombok:lombok:$lombokVersion"
    testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"

//    implementation("io.micronaut.serde:micronaut-serde-jackson:2.1.0")

    api 'org.apache.commons:commons-lang3'
    api 'org.apache.commons:commons-collections4'
    api 'io.netty:netty-common'
//    api 'com.fasterxml.uuid:java-uuid-generator'

    compileOnly 'ch.qos.logback:logback-classic'
//    api 'org.codehaus.janino:janino'

    // for wildcard matching
    api 'com.hrakaroo:glob:0.9.0'

    api 'org.apache.jclouds:jclouds-core'
    api 'io.cloudevents:cloudevents-api'
    api 'io.cloudevents:cloudevents-json-jackson'

    api "org.redisson:redisson"
    api "org.apache.curator:curator-recipes"
    api "org.apache.curator:curator-x-discovery"
    api "org.apache.curator:curator-x-async"
//    api "org.redisson:redisson-all"

    implementation "org.apache.zookeeper:zookeeper"
    implementation "org.apache.curator:curator-recipes"
    implementation "org.apache.curator:curator-x-discovery"
    implementation "org.apache.curator:curator-x-async"

//    testImplementation testFixtures(project(':test-fixtures'))

    testImplementation 'org.junit.jupiter:junit-jupiter'
//    testImplementation 'io.github.artsok:rerunner-jupiter'
    testImplementation 'org.awaitility:awaitility'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'ch.qos.logback:logback-classic'
    testImplementation 'org.mockito:mockito-junit-jupiter'

    api project(':common')
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
